--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,53 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
 <body>
-  <h1>What you need to do now</h1>
+  <header>
+    <h1>Simple TO-DO list</h1>
+  </header>
+  <main>
+    <header>
+      <button>New TO-DO task</button>
+      <form>
+        <input type="text" placeholder="New task">
+        <input type="submit" value="Save">
+      </form>
+    </header>
+    <ul>
+      <li>
+        <input type="checkbox" name="" id="">
+        <p>Something todo 1</p>
+        <button></button>
+      </li>
+      <li>
+        <input type="checkbox" name="" id="">
+        <p>Something todo 2</p>
+        <button></button>
+      </li>
+      <li>
+        <input type="checkbox" name="" id="">
+        <p>Something todo 3</p>
+        <button></button>
+      </li>
+    </ul>
+    <footer>
+      <label for="">
+        Hide completed
+        <div>
+          <input type="checkbox" name="" id="">
+          <span></span>
+        </div>
+      </label>
+    </footer>
+  </main>
+  <footer>
+    <address>Created by Eugene Dubouski (
+      <a href="https://github.com/joinhud">github.com/joinhud</a>)</address>
+  </footer>
 </body>
 
 </html>
