simple-todo/feature: finish implementing style

--- a/public/index.html
+++ b/public/index.html
@@ -25,21 +25,21 @@
       </header>
       <ul class="list-group list-group-flush">
         <li class="list-group-item task">
-          <input class="mx-2" type="checkbox" name="" id="">
+          <input class="task-completed-btn mx-2" type="checkbox" name="" id="">
           <p class="task-description">Something todo 1</p>
           <button type="button" class="close align-self-start" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </li>
         <li class="list-group-item task">
-          <input class="mx-2" type="checkbox" name="" id="">
+          <input class="task-completed-btn mx-2" type="checkbox" name="" id="">
           <p class="task-description">Something todo 2</p>
           <button type="button" class="close align-self-start" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </li>
         <li class="list-group-item task">
-          <input class="mx-2" type="checkbox" name="" id="">
+          <input class="task-completed-btn mx-2" type="checkbox" name="" id="">
           <p class="task-description">Something todo 3</p>
           <button type="button" class="close align-self-start" aria-label="Close">
             <span aria-hidden="true">&times;</span>
