--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,17 @@
   </header>
   <main class="row justify-content-center align-items-start">
     <section class="card w-100 todo-card">
-      <header class="d-flex flex-column align-items-center card-header text-center">
+      <header class="d-flex flex-column align-items-center justify-content-center card-header text-center">
         <button class="btn btn-primary mb-2" type="button" data-toggle="collapse" data-target="#addNewTodoForm" aria-expanded="false"
           aria-controls="addNewTodoForm">New TO-DO task</button>
-        <form class="collapse form-inline align-self-stretch" id="addNewTodoForm">
+        <form class="collapse form-inline align-self-stretch" id="new-task-form">
           <div class="form-group w-100 d-flex flex-nowrap mb-0">
-            <input class="form-control mr-2 w-100" type="text" placeholder="New task">
+            <input class="form-control mr-2 w-100" type="text" placeholder="New task" id="task-description">
             <input class="btn btn-success" type="submit" value="Save">
           </div>
         </form>
       </header>
-      <ul class="list-group list-group-flush">
+      <ul id="task-list" class="list-group list-group-flush">
         <li class="list-group-item task">
           <input class="task-completed-btn mx-2" type="checkbox" name="" id="">
           <p class="task-description">Something todo 1</p>
