simple-todo/feature: start implementing view logic

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
       </header>
       <ul id="task-list" class="list-group list-group-flush">
         <li class="list-group-item task">
-          <input class="task-completed-btn mx-2" type="checkbox" name="" id="">
+          <input class="task-completed-btn mx-2" type="checkbox">
           <p class="task-description">Something todo 1</p>
-          <button type="button" class="close align-self-start" aria-label="Close">
+          <button type="button" class="close align-self-start delete-task-btn" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </li>
