simple-todo/feature: add logic in index.js

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   <main class="row justify-content-center align-items-start">
     <section class="card w-100 todo-card">
       <header class="d-flex flex-column align-items-center justify-content-center card-header text-center">
-        <button class="btn btn-primary mb-2" type="button" data-toggle="collapse" data-target="#addNewTodoForm" aria-expanded="false"
-          aria-controls="addNewTodoForm">New TO-DO task</button>
+        <button class="btn btn-primary mb-2" type="button" data-toggle="collapse" data-target="#new-task-form" aria-expanded="false"
+          aria-controls="new-task-form">New TO-DO task</button>
         <form class="collapse form-inline align-self-stretch" id="new-task-form">
           <div class="form-group w-100 d-flex flex-nowrap mb-0">
             <input class="form-control mr-2 w-100" type="text" placeholder="New task" id="task-description">
@@ -24,7 +24,7 @@
         </form>
       </header>
       <ul id="task-list" class="list-group list-group-flush">
-        <li class="list-group-item task">
+        <!-- <li class="list-group-item task">
           <input class="task-completed-btn mx-2" type="checkbox">
           <p class="task-description">Something todo 1</p>
           <button type="button" class="close align-self-start delete-task-btn" aria-label="Close">
@@ -44,7 +44,7 @@
           <button type="button" class="close align-self-start" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-        </li>
+        </li> -->
       </ul>
       <footer class="card-footer d-flex align-items-center justify-content-end">
         <label class="my-1" for="switch-hide-completed">
