simple-todo/feature: implement logic for updating task status

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <section class="card w-100 todo-card">
       <header class="d-flex flex-column align-items-center justify-content-center card-header text-center">
         <button class="btn btn-primary mb-2" type="button" data-toggle="collapse" data-target="#new-task-form" aria-expanded="false"
-          aria-controls="new-task-form">New TO-DO task</button>
+          aria-controls="new-task-form" id="add-task-btn">New TO-DO task</button>
         <form class="collapse form-inline align-self-stretch" id="new-task-form">
           <div class="form-group w-100 d-flex flex-nowrap mb-0">
             <input class="form-control mr-2 w-100" type="text" placeholder="New task" id="task-description">
